--- a/2017 Robot/build.properties
+++ b/2017 Robot/build.properties
@@ -1,6 +1,10 @@
-# Project specific information
-package=org.usfirst.frc.team2849.robot
-robot.class=${package}.Robot
-simulation.world.file=/usr/share/frcsim/worlds/GearsBotDemo.world
-#Uncomment and point at user libraries to include them in the build. Do not put libraries in the \wpilib\java folder, this folder is completely overwritten on plugin update.
-#userLibs=${user.home}/wpilib/user/lib
+# Properties file for a Sun Spot Application
+#
+# build.properties
+#
+# This file is the default location for user properties that over-ride the
+# defaults in ${sunspot.home}/default.properties.  See that file for a full
+# listing of the properties that may be set.  This file is minimal and contains
+# only those properties that a user would generally need to set right away.
+#
+user.classpath=${wpilibj.home}/src
